libs/toolkit-macros-tests/tests/ui/fail/deps_not_array.stderr
error: deps must be an array, e.g. deps = [authn_resolver, types_registry]
 --> tests/ui/fail/deps_not_array.rs:3:23
  |
3 | #[gear(name="x", deps="db")]
  |                       ^^^^
